<resources>
    <string name="app_name">Condominium</string>
    <string name="cadastrar_morador">"Register Resident "</string>
    <string name="nome">Name</string>
    <string name="limpar">Clean</string>
    <string name="salvar">Save</string>
    <string name="erro_nome">Name cannot be empty!</string>
    <string name="bloco1">Block 1</string>
    <string name="bloco2">Block 2</string>
    <string name="bloco3">Block 3</string>
    <string name="bloco4">Bloco 4</string>
    <string name="situacao">Situation</string>
    <string name="bloco">Block</string>
    <string name="bloco5">Bloco5</string>
    <string name="proprietario">Owner</string>
    <string name="locatario">Lessee</string>
    <string name="vazio" />
    <string name="apartamento">Apartment</string>
    <string name="ap101">101</string>
    <string name="ap102">102</string>
    <string name="ap103">103</string>
    <string name="ap104">104</string>
    <string name="apartamento_erro">"Apartment cannot be empty! "</string>
    <string name="joao">João</string>
    <string name="maria">Maria</string>
    <string name="jose">José</string>
    <string name="pedro">Pedro</string>
    <string name="carlos">Carlos</string>
    <string name="lucas">Lucas</string>
    <string name="julia">Julia</string>
    <string name="luna">Luna</string>
    <string name="luciana">Luciana</string>
    <string name="mariane">Mariane</string>
    <string name="foi_clicado">"was clicked! "</string>
    <string name="nomeAluno">Bernardo Alberto Faedo Beppler</string>
    <string name="curso">" Specialization in Java Technology"</string>
    <string name="emailAluno">bernardobeppler@alunos.utfpr.edu.br</string>
    <string name="descricaoApp">"Application for registration and control of residents in Condominiums "</string>
    <string name="logoUTFPR">Logo UTFPR</string>
    <string name="tituloDescricaoApp">"App Description "</string>
    <string name="tituloAluno">Student</string>
    <string name="tituloCurso">Course</string>
    <string name="tituloEmail">Email</string>
    <string name="Adicionar">Add</string>
    <string name="sobre">About</string>
    <string name="tituloNome">Name</string>
    <string name="tituloSituacao">Situation</string>
    <string name="tituloBloco">Block</string>
    <string name="tituloApartamento">Apartment</string>
    <string name="novo_morador">New Resident</string>
    <string name="alterar_morador">Change Resident</string>
    <string name="erro_situacao">Situation cannot be empty!</string>
    <string name="alterar">Change</string>
    <string name="excluir">Delete</string>
    <string name="bloco_erro">"Block cannot be empty! "</string>
    <string name="limpo">Clean</string>
    <string name="temaEscuro">Dark Theme</string>
    <string name="temaClaro">Light Theme</string>
    <string name="excluirMorador">Do you want to delete the resident?</string>
    <string name="confirmacao">Confirmation</string>
    <string name="sim">Yes</string>
    <string name="nao">No</string>
</resources>