<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/menuItemAdicionar"
        android:icon="@android:drawable/ic_input_add"
        android:title="@string/Adicionar"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/menuItemTemaClaro"
        android:checkable="false"
        android:checked="false"
        android:title="@string/temaClaro" />
    <item
        android:id="@+id/menuItemTemaEscuro"
        android:checkable="false"
        android:checked="false"
        android:title="@string/temaEscuro"></item>
    <item
        android:id="@+id/menuItemSobre"
        android:title="@string/sobre" />
</menu>